@@ -22,7 +22,7 @@ public final class Class5ExtendingClass3AndImplementingInterface2 extends Class3
 	@Override public long getLong( Class3ImplementingInterface class3ImplementingInterface )
 	{
 		@RuntimeVisibleAnnotation2 //Java blooper: this is silently ignored: it is nowhere to be found in the .class file!
-		long id = Thread.currentThread().getId();
+		long id = Thread.currentThread().threadId();
 		return id;
 	}
 }
